<resources>
<string name="app_name">Shopping List</string>

<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="admob_banner_id">ca-app-pub-8462980126781299/5410228378</string>


<string name="action_settings">Settings</string>
<string name="share">Start sharing</string>
<string name="rename">Rename</string>
<string name="delete">Delete</string>
<string name="add">Add</string>
<string name="ok_button">OK</string>
<string name="are_you_sure">Are you sure?</string>
<string name="cancel">Cancel</string>
<string name="clear_done">Clear done</string>
<string name="clear_all">Clear list</string>
<string name="clear_shared">Clear this list</string>
<string name="enter_the_name_of_product">WHAT WOULD YOU LIKE?</string>
<string name="enter_product_name">Enter product name</string>
<string name="enter_quantity">Enter quantity</string>
<string name="create_new_list">Create new list</string>
<string name="add_new_list">Add new list</string>
<string name="list_name">List name</string>
<string name="rename_list">Rename</string>
<string name="rename_list_header">Rename list</string>
<string name="choose_list">Choose list</string>
<string name="make_shopping_easier">Make shopping easier!</string>
<string name="delete_list">Delete list</string>
<string name="logout">Log out</string>
<string name="login">Log in</string>
<string name="back_to_list">Back to list</string>

<string name="logout_text">Sign out</string>

<string name="email_hint">Email</string>
<string name="password_hint">Password</string>

<string name="sign_in">Sign in</string>
<string name="sign_up_button">Sign up</string>

<string name="loading">Loading…</string>

<string name="click_to_verify">Click to verify</string>

<string name="facebook_app_id">159407041402897</string>
<string name="fb_login_protocol_scheme">fb159407041402897</string>
<string name="change_product">Change product</string>
<string name="new_product_name">New product name</string>
<string name="sort_list">Sort list</string>
<string name="secret_key">I love Shopping</string>
<string name="guess_the_secret_phrase">Guess the secret phrase</string>
<string name="remove_ads">Remove banner</string>
<string name="title_activity_settings">Settings</string>

<string name="chose_language">Language</string>
<string-array name="chose_language_array_titles">
    <item>English</item>
    <item>Русский</item>
    <item>Cestina</item>
</string-array>
<string-array name="chose_language_array_values">
    <item>1</item>
    <item>0</item>
    <item>2</item>
</string-array>

<string name="pref_ringtone_silent">Silent</string>

<string name="pref_title_block_screen">Disable auto lock screen</string>
<string name="pref_log_out_on_exit">Log out on exit</string>
<string name="remove_ads_completely">Remove ads completely</string>
<string name="app_version">2.12</string>
<string name="title_version">Version</string>
<string name="contact_us">Contact</string>
<string name="watch_ads_video">Watch ads video</string>
<string name="send_email">Send email..</string>
<string name="banner_not_border">Congratulations banner will not border you!</string>
<string name="nice_try">Nice try!</string>
<string name="to_remove_ads_for_now">Remove banner for now</string>
<string name="well_done_you_got">Well done, you just got</string>
<string name="check_for_shared_lists">Check for shared lists</string>
<string name="user_mail_domain_com">user_mail@domain.com</string>
<string name="user_name_card">User name</string>
<string name="no_user_finded">No user found</string>
<string name="search_user">Search user..</string>
<string name="no_list_available">No list available</string>
<string name="thank_you">Thank you!</string>
<string name="need_restart">Restart app for your changes to take effect</string>
<string name="must_sign_in_to_share">You must sign in to share list!</string>
<string name="want_to_share_list">want to share list:</string>
<string name="list_available_to">List available  to </string>
<string name="now"> now!</string>


</resources>
