<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:visible="true"
        android:title="@string/share" />
    <item
        android:id="@+id/rename"
        android:title="@string/rename" />
    <item
        android:id="@+id/sort_list"
        android:title="@string/sort_list" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/clear_done"
        android:orderInCategory="100"
        android:title="@string/clear_done"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_all"
        android:orderInCategory="100"
        android:title="@string/clear_all"
        app:showAsAction="never" />
</menu>
