<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/first_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/new_list"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/create_new_list" />

        <item
            android:visible="true"
            android:id="@+id/choose_list"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/choose_list" />
    </group>

    <group
        android:id="@+id/option_group"
        android:checkableBehavior="none">
        <item
            android:visible="true"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

    <group
        android:id="@+id/second_group"
        android:checkableBehavior="none">
        <item
            android:visible="true"
            android:id="@+id/check_shared"
            android:icon="@drawable/baseline_share_black_24dp"
            android:title="@string/check_for_shared_lists" />

        <item
            android:visible="true"
            android:id="@+id/log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/login" />
    </group>

</menu>
