<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rename_list">

    <TextView
        android:id="@+id/head_change_product"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dialogBackground"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:text="@string/change_product"
        android:textColorLink="@color/colorAccent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"/>

    <EditText
        android:id="@+id/enter_product_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/new_product_name"
        android:inputType="textCapSentences"
        android:textSize="8pt">
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/delete_item"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/rename_item"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/rename" />
    </LinearLayout>

    <Button
        android:id="@+id/cancel_add_item_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cancel" />

</LinearLayout>