<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/add_product">


    <TextView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/dialogBackground"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:text="@string/enter_the_name_of_product"
        android:textColorLink="@color/colorAccent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/enter_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/enter_product_name"
        android:inputType="textCapSentences"
        android:textSize="8pt">
    </EditText>

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/enter_quantity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/enter_quantity"
        android:inputType="numberDecimal"
        android:textSize="8pt"
        />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>